--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Рожкован - StayHealthy</title>
-    <link rel="stylesheet" href="/CSS/zadanie1.css">
-    <link rel="stylesheet" href="/CSS/tel.adaptiv.css">
+    <link rel="stylesheet" href="CSS/zadanie1.css">
+    <link rel="stylesheet" href="CSS/tel.adaptiv.css">
 </head>
 <body>
     <header>
@@ -371,6 +371,6 @@
     <div class="p5">
         <p>© 2021 StayHealty. All rights reserved</p>
     </div>
-    <script src="/JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
