--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <button class="button_white">Contact Us</button> 
             </div>
             <div class="w1">
-                <img class="w2" src="картинки/плеер.png" alt="">
-                <img src="картинки/чел с шапки.png" alt="">
+                <img class="w2" src="img/плеер.png" alt="">
+                <img src="img/чел с шапки.png" alt="">
             </div>
         </div>
     </section>
@@ -64,36 +64,36 @@
         </div>
         <div class="slider conteiner">
             <div class="slide">
-                <img class="z1" src="картинки/третий людь.png" alt="">
+                <img class="z1" src="img/третий людь.png" alt="">
                 <p class="byb">Full Body Workout</p>
                 <p class="ch141">By The Rock</p>
                 <p class="hc14">You can do it in your own home, all in under 30</p>
                 <p class="hc144"> mins? just need a mat and som . . .</p>
                 <div class="flex">
                     <p class="c14ch">Check out this program!</p>
-                    <img class="im1" src="картинки/стрелочка.png" alt="">
+                    <img class="im1" src="img/стрелочка.png" alt="">
                 </div>
             </div>
             <div class="slide">
-                <img class="z1" src="картинки/второй людь.png" alt="">
+                <img class="z1" src="img/второй людь.png" alt="">
                 <p class="byb">Bodyweight Workout</p>
                 <p class="ch141">By Timi Tarner</p>
                 <p class="hc14">No need equipments, just your body, your soul,</p>
                 <p class="hc144">and your spirit. You can do . . .</p>
                 <div class="flex">
                     <p class="c14ch">Check out this program!</p>
-                    <img class="im2" src="картинки/стрелочка.png" alt="">
+                    <img class="im2" src="img/стрелочка.png" alt="">
                 </div>
             </div>
             <div class="slide">
-                <img class="z1" src="картинки/первый людь.png" alt="">
+                <img class="z1" src="img/первый людь.png" alt="">
                 <p class="byb">Dumbell Workout</p>
                 <p class="ch141">By Frank Jane</p>
                 <p class="hc14">This is a workout you can do at home just using</p>
                 <p class="hc144"> a set of barbells. The workout is . . .</p>
                 <div class="flex">
                     <p class="c14ch">Check out this program!</p>
-                    <img class="im3" src="картинки/стрелочка.png" alt="">
+                    <img class="im3" src="img/стрелочка.png" alt="">
                 </div>
             </div>
             <div class="arrows">
@@ -105,7 +105,7 @@
 
     <section class="thre">
         <div class="conteinerssss">
-            <img src="картинки/жена муж.png" alt="">
+            <img src="img/жена муж.png" alt="">
             <div class="pid">
                 <p class="o1">Nutritions</p>
                 <h2>Meal Preparation For Workout</h2>
@@ -122,28 +122,28 @@
             <div class="pol">
                 <div class="conteinersos">
                     <p class="the">Basic</p>
-                    <img class="faimg" src="/картинки/качек.png" alt="">
+                    <img class="faimg" src="img/качек.png" alt="">
                     <p class="vba">The Rock</p>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>3 Times A Week</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Full Zoom</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>PDF Module</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Meal Preparation</p>
                         </div>
@@ -158,34 +158,34 @@
                 <div class="conteinersos">
                     <div></div>
                     <p class="the">Standar</p>
-                    <img class="faimg" src="картинки/девушка.png" alt="">
+                    <img class="faimg" src="img/девушка.png" alt="">
                     <p class="vba">Anna Jane</p>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>4 Times A Week</p>
                         </div>
                     </div>
                     <div class="toh"> 
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Full Zoom</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>PDF Module</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Meal Preparation</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Suplement</p>
                         </div>
@@ -199,40 +199,40 @@
                 
                 <div class="conteinersos">
                     <p class="the">Premium</p>
-                    <img class="faimg" src="картинки/спорт.png" alt="">
+                    <img class="faimg" src="img/спорт.png" alt="">
                     <p class="vba">The Rock</p>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>3 Times A Week</p>
                         </div>
                     </div>
                     <div class="toh"> 
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Full Zoom</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>PDF Module</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Meal Preparation</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Suplement</p>
                         </div>
                     </div>
                     <div class="toh">
-                        <img src="/картинки/галочка.png" alt="">
+                        <img src="img/галочка.png" alt="">
                         <div>
                             <p>Gym Equipment</p>
                         </div>
@@ -252,7 +252,7 @@
             <div>
                 <p class="mo1">ABOUT US</p>
             </div>
-            <img class="img1" src="/картинки/кавычки.png" alt="">
+            <img class="img1" src="img/кавычки.png" alt="">
             <div>
                 <p class="mo2">Benefits Of Joining With Us</p>
             </div>
@@ -275,28 +275,28 @@
         </div>
         <div class="iiii1">
             <div class="pervoe1">
-                <img src="картинки/энергия.png" alt="">
+                <img src="img/энергия.png" alt="">
                 <div class="text">
                     <p class="rt1">Flexible Class</p>
                     <p class="rt2">You Can Adapt The Class To Your Busy Life Very Easily Workout Everytime And Everywhere.</p>
                 </div>
             </div>
             <div class="pervoe1">
-                <img src="картинки/гантелька.png" alt="">
+                <img src="img/гантелька.png" alt="">
                 <div class="text">
                     <p class="rt1">Best Trainers</p>
                     <p class="rt2">Our Trainers Is Very Profesional, Very Motivated And Funny.</p>
                 </div>
             </div>
             <div class="pervoe1">
-                <img src="картинки/список.png" alt="">
+                <img src="img/список.png" alt="">
                 <div class="text">
                     <p class="rt1">Track Progress</p>
                     <p class="rt2">See Your Progress And Workout Features For Tracking Your Healthy.</p>
                 </div>
             </div>
             <div class="pervoe1">
-                <img src="картинки/монитор.png" alt="">
+                <img src="img/монитор.png" alt="">
                 <div class="text">
                     <p class="rt1">Meet New Friends</p>
                     <p class="rt2">We Have The Big Classes In The Online Workout, You Can Meet Our New Member For Sharing And Chill Out.</p>
@@ -321,12 +321,12 @@
                 </div>
                 <div class="imgf">
                     <div>
-                        <img class="n1" src="/картинки/p1.png" alt="">
-                        <img class="n2" src="/картинки/p2.png" alt="">
+                        <img class="n1" src="img/p1.png" alt="">
+                        <img class="n2" src="img/p2.png" alt="">
                     </div>
                     <div>
-                        <img class="n3" src="/картинки/p3.png" alt="">
-                        <img class="n4" src="/картинки/p4.png" alt="">
+                        <img class="n3" src="img/p3.png" alt="">
+                        <img class="n4" src="img/p4.png" alt="">
                     </div>            
                 </div>
             </div>
@@ -338,9 +338,9 @@
             <p class="rt1">StayHealthy</p>
             <p class="dtd">Online Training, and Consultation About Diet and Exercise tailored based on user needs. </p>
             <div>
-                <img src="картинки/ютуб.png" alt="">
-                <img src="картинки/фесбук.png" alt="">
-                <img src="картинки/инсограм.png" alt="">
+                <img src="img/ютуб.png" alt="">
+                <img src="img/фесбук.png" alt="">
+                <img src="img/инсограм.png" alt="">
             </div>
         </div>
         <div>
